--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">Ganks</string>
     <string name="tab_menu_home">首页</string>
     <string name="tab_menu_meizi">福利</string>
-    <string name="tab_menu_video">视频</string>
+    <string name="tab_menu_video">探探</string>
     <string name="tab_menu_setting">设置</string>
 </resources>
